started with payment

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^5.3.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.2",
+    "stripe": "^7.1.0",
     "uuid": "^3.3.2",
     "xml2js": "^0.4.19"
   },
