--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
+    "http-status-codes": "^1.3.2",
     "moment": "^2.24.0",
     "mongoose": "^5.5.2",
     "stripe": "^7.1.0",
