--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js",
-    "test": "env-cmd ./config/test.env jest --watch"
+    "test": "env-cmd ./config/test.env jest --watch",
+    "dev:test": "env-cmd ./config/test.env nodemon src/index.js"
   },
   "jest": {
     "testEnvironment": "node"
